--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
 <mat-card class="navbar-container">
   <mat-card-content>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
@@ -25,7 +23,7 @@
         </ul>
         <ul class="navbar-nav mr-0" *ngIf="authService.isLoggedIn()">
           <li class="nav-item">
-            <a routerLink="/category/user/{{userService.currentUser.id}}" routerLinkActive="active" class="nav-link px-3">Комунальні послуги</a>
+            <a routerLink="/user/{{userService.currentUser.id}}/category" routerLinkActive="active" class="nav-link px-3">Комунальні послуги</a>
           </li>
         </ul>
         <ul class="navbar-nav mr-1" *ngIf="authService.isLoggedIn() && userService.isAdmin()">
@@ -60,6 +58,16 @@
   <div class="row no-gutters">
     <div class="d-none d-lg-block col-lg-1"></div>
     <div class="col-md-12 col-lg-10">
+
+
+          <div *ngIf="authService.isLoggedIn()">
+            <mat-card>
+              <mat-card-content>
+                <breadcrumb prefix="Домашня"></breadcrumb>
+              </mat-card-content>
+            </mat-card>
+          </div>
+
       <router-outlet></router-outlet>
       <ng4-loading-spinner></ng4-loading-spinner>
     </div>
