--- a/src/app/meter/meter-indicators-info/meter-indicators-info.component.html
+++ b/src/app/meter/meter-indicators-info/meter-indicators-info.component.html
@@ -5,10 +5,10 @@
         <!--<span class="badge badge-info" (click)="meterInfo(meter.id)" style="cursor: pointer">{{meter.name}}</span>-->
       </h5>
       <div id="add-indicator-button">
-        <button class="btn btn-primary btn-sm d-xs-inline-block d-sm-none" (click)="addIndicator(meter.id)">
+        <button class="btn btn-primary btn-sm d-xs-inline-block d-sm-none" (click)="addIndicator()">
           <i class="fa fa-plus" aria-hidden="true"></i>
         </button>
-        <button class="btn btn-primary btn-sm d-none d-sm-inline-block" (click)="addIndicator(meter.id)">
+        <button class="btn btn-primary btn-sm d-none d-sm-inline-block" (click)="addIndicator()">
           Додати показник
         </button>
       </div>
