--- a/src/app/user/users-list/users-list.component.html
+++ b/src/app/user/users-list/users-list.component.html
@@ -115,16 +115,22 @@
                   <i class="fa fa-info pr-1 pl-1" aria-hidden="true"></i>
                 </button>
                 <div class="button-separator inline-block"></div>
-                <button class="btn btn-warning btn-sm inline-block" (click)="categoriesList(user.id)">
-                  <i class="fa fa-list-ul" aria-hidden="true"></i>
-                </button>
-                <div class="button-separator inline-block"></div>
                 <button class="btn btn-primary btn-sm inline-block" (click)="editUser(user.id)">
                   <i class="fa fa-pencil" aria-hidden="true"></i>
                 </button>
                 <div class="button-separator inline-block"></div>
                 <button class="btn btn-danger btn-sm inline-block" (click)="deleteUser(user.id)">
                   <i class="fa fa-trash" aria-hidden="true"></i>
+                </button>
+                <div class="button-separator inline-block"></div>
+                <div class="button-separator inline-block"></div>
+                <div class="button-separator inline-block"></div>
+                <button class="btn btn-success btn-sm inline-block" (click)="categoriesList(user.id)">
+                  <i class="fa fa-list-ul" aria-hidden="true"></i>
+                </button>
+                <div class="button-separator inline-block"></div>
+                <button class="btn btn-success btn-sm inline-block" (click)="fundsList(user.id)">
+                  <i class="fa fa-money" aria-hidden="true"></i>
                 </button>
               </td>
             </tr>
